page.js integration

--- a/JSApplications/theCookBookProject/package.json
+++ b/JSApplications/theCookBookProject/package.json
@@ -18,6 +18,7 @@
     "playwright-chromium": "^1.50.1"
   },
   "dependencies": {
-    "lit-html": "^3.2.1"
+    "lit-html": "^3.2.1",
+    "page": "^1.11.6"
   }
 }
