--- a/JS_Back-end/2.1 Exercise/.vscode/launch.json
+++ b/JS_Back-end/2.1 Exercise/.vscode/launch.json
@@ -7,12 +7,13 @@
     
         {
             "type": "node",
+            "runtimeArgs": ["--watch"],
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Debug",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${file}"
+            "program": "${workspaceFolder}/src/index.js"
         }
     ]
 }
