--- a/JS_Back-end/1.2 Exercise/project_attempt/package.json
+++ b/JS_Back-end/1.2 Exercise/project_attempt/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch ./src/index.js"
   },
   "keywords": [],
   "author": "",
