--- a/JS_Back-end/4. Session and Authentication/package.json
+++ b/JS_Back-end/4. Session and Authentication/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "express-session": "^1.18.2"
