--- a/JS_Back-end/4. Session and Authentication/package.json
+++ b/JS_Back-end/4. Session and Authentication/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
